--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-02-26  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* filter/msword.pl (filter): Fix wvHtml option. (-o was unnecessary)
+
+	* filter/mailnews.pl: Fix multipart handling bug by applying
+	Toshiaki -PCX- Tanaka's patch.	[namazu-devel-ja:00030]
+
 2000-02-26  Ken-ichi Hirose  <kenzo-@tama.or.jp>
 
         * filter/olemsword.pl (enum): Change $enum_func to $func.
