--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-26  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* POTFILES.in: Add filter/msword.pl
+
 2000-02-22  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* POTFILES.in: Add filter/html.pl
