--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-02-26  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tests/data/ja/Makefile.am (EXTRA_DIST): Remove pdf.txt
+
 	* tests/idxdiff-1: New file.
 
 	* tests/idxdiff-2: New file.
