--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-26  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* tests/Makefile.am: Tiny Fix.
+
 2000-02-26  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* tests/data/ja/Makefile.am (EXTRA_DIST): Remove pdf.txt
