--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-02-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tests/namazu-cgi-1: Change `export' syntax.
+
+	* tests/namazu-cgi-2: Likewise.
+	
 	* scripts/mknmz.in (re_exec): Store $key_count.
 
 2000-02-26  Ryuji Abe  <raeva@t3.rim.or.jp>
