--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-02-27 11:33+0900\n"
+"POT-Creation-Date: 2000-02-27 17:32+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -199,8 +199,7 @@ msgid ""
 "    -o, --output=FILE    set the output file name to FILE.\n"
 "    -f, --config=FILE    set the config file name to FILE.\n"
 "    -C, --show-config    print current configuration.\n"
-"    -q, --quiet          do not display extra messages except search "
-"results.\n"
+"    -q, --quiet          do not display extra messages except search results.\n"
 "    -d, --debug          be debug mode.\n"
 "    -v, --version        show the version of namazu and exit.\n"
 "        --help           show this help and exit\n"
@@ -656,27 +655,19 @@ msgid ""
 "Target files:\n"
 "  -a, --all                target all files.\n"
 "  -e, --robots-txt         exclude files which is excluded by robots.txt.\n"
-"  -t, --media-type=MTYPE   set the media type for all target files to "
-"MTYPE.\n"
+"  -t, --media-type=MTYPE   set the media type for all target files to MTYPE.\n"
 "  -h, --mailnews           same as --media-type='message/rfc822'\n"
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
 "  -F, --target-list=FILE   load FILE which contains a list of target files.\n"
-"      --allow=PATTERN      set PATTERN for file names which should be "
-"allowed.\n"
-"      --deny=PATTERN       set PATTERN for file names which should be "
-"denied.\n"
-"      --exclude=PATTERN    set PATTERN for pathnames which should be "
-"excluded.\n"
-"  -M, --meta               handle HTML meta tags for field-specified "
-"search.\n"
+"      --allow=PATTERN      set PATTERN for file names which should be allowed.\n"
+"      --deny=PATTERN       set PATTERN for file names which should be denied.\n"
+"      --exclude=PATTERN    set PATTERN for pathnames which should be excluded.\n"
+"  -M, --meta               handle HTML meta tags for field-specified search.\n"
 "  -r, --replace=CODE       set CODE for replacing URI.\n"
-"  -o, --ole                use OLE document filters. (works on Windows "
-"only)\n"
-"      --mtime=NUM          limit by mtime just like find(1)'s -mtime "
-"option.\n"
-"                           e.g., -50 for recent 50 days, +50 for older than "
-"50.\n"
+"  -o, --ole                use OLE document filters. (works on Windows only)\n"
+"      --mtime=NUM          limit by mtime just like find(1)'s -mtime option.\n"
+"                           e.g., -50 for recent 50 days, +50 for older than 50.\n"
 "\n"
 "Morphological Analysis:\n"
 "  -c, --use-chasen         use ChaSen for analyzing Japanese.\n"
