--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-27  Kenji Suzuki  <kenji@po.ganseki.ne.jp>
+
+        * filter/hnf.pl: GRP bug fix again
+
 2000-02-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* tests/mknmz-5: New file.
