--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-02-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* filter/msword.pl (filter): Exclude wvHtml's footer becaues 
+	has no good index terms. 
+
 2000-02-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* pl/usage.pl): Modify usage.
