--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2000-02-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tests/mknmz-3: Fix test-log handling.
+
+	* tests/mknmz-2 (targets): Likewise.
+
+	* tests/data/ja/Makefile.am (EXTRA_DIST): Add word97.doc.
+
 	* filter/msword.pl (filter): Exclude wvHtml's footer becaues 
 	has no good index terms. 
 
