--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-02-28 00:06+0900\n"
+"POT-Creation-Date: 2000-02-28 07:52+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -790,12 +790,14 @@ msgstr ""
 "      --deny=PATTERN       拒絶するファイル名の正規表現を指定する\n"
 "      --exclude=PATTERN    除外するパス名の正規表現を指定する\n"
 "  -e, --robots             次の記述を含む HTMLファイルを除外する\n"
-"                           <meta name=\\\"ROBOTS\\\" content=\\\"NOINDEX\\\">\n"
+"                           <meta name=\\\"ROBOTS\\\" "
+"content=\\\"NOINDEX\\\">\n"
 "  -M, --meta               HTMLの metaタグをフィールド指定検索に用いる\n"
 "  -r, --replace=CODE       URIを置換するためのコードを指定する\n"
 "  -o, --ole                OLEの文書フィルタを用いる (Windows環境のみ)\n"
 "      --mtime=INT          変更日制限 find(1) の -mtime と同じ規則\n"
-"                           例: -50 で 50 日以内、+50 で 50 日より古いものだけ\n"
+"                           例: -50 で 50 日以内、+50 で 50 "
+"日より古いものだけ\n"
 "\n"
 "形態素解析:\n"
 "  -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる\n"
