--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-02-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tests/Makefile.am (EXTRA_DIST): New variable.
+
 	* tests/mknmz-3: Fix test-log handling.
 
 	* tests/mknmz-2 (targets): Likewise.
