Updated File::MMagic module.

--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -2,6 +2,8 @@
 
 	* MMagic.pm: Changed URI for Namzu Project.
 	(contributed by Satoru Takabayasi)
+	Fixed to work multiple subtests.
+	Changed some entries for MicroSoft Office files.
 
 	* perl-File-MMagic.spec: Created.
 	(contributed by Ryuji Abe)
