--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2000-02-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tests/data/ja/taro4.jsw: Renamed from ichitaro4.jsw because
+	JSTXT.EXE can handle only an 8.3 file name. [namazu-devel-ja:00076]
+			
+	* tests/data/ja/taro5.jaw: Likewise.
+			
+	* tests/data/ja/taro6.jbw: Likewise.
+
+	* tests/data/ja/Makefile.am (EXTRA_DIST): s/ichi//g
+
 	* tests/data/ja/Makefile.am (EXTRA_DIST): Remove pdf.pdf.
 
 	* tests/data/ja/pdf.pdf: Removed.
