--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-02-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tests/data/ja/Makefile.am (EXTRA_DIST): Fix typo.
+
 	* tests/data/ja/taro4.jsw: Renamed from ichitaro4.jsw because
 	JSTXT.EXE can handle only an 8.3 file name. [namazu-devel-ja:00076]
 			
