--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2000-02-29  Ken-ichi Hirose  <kenzo-@tama.or.jp>
+
+	* lib/easy-vsnprintf.c: Add #include <config.h>.
+
+	* src/namazu-cmd.c (main): Add getenv("NAMAZULOCALEDIR") function
+	for Win32.
+
+	* src/namazu-cgi.c (main): Likewise.
+
 2000-02-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* tests/data/ja/Makefile.am (EXTRA_DIST): Fix typo.
