--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,62 @@
+2000-02-29  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* tests/Makefile.am (clean-local): Fix bug. Don't remove
+	idxdiff-*. 
+
+	* tests/mknmz-1: Use select-data to get $TARGET.
+	
+	* tests/mknmz-2: Likewise
+	
+	* tests/mknmz-3: Likewise
+	
+	* tests/mknmz-4: Likewise
+	
+	* tests/mknmz-5: Likewise
+	
+	* tests/gcnmz-1: Likewise
+	
+	* configure.in (AC_OUTPUT): Add tests/data/en/Makefile.
+
+	* tests/select-data: New file.
+
+	* tests/data/Makefile.am (SUBDIRS): Add `en'.
+
+	* tests/data/en/Makefile.am (EXTRA_DIST): New file.
+
+	* tests/data/en/acrobat3.pdf: New file.
+
+	* tests/data/en/excel97.xls: Likewise.
+
+	* tests/data/en/html.html: Likewise.
+
+	* tests/data/en/mail-multipart.txt: Likewise.
+
+	* tests/data/en/mail.txt: Likewise.
+
+	* tests/data/en/man.1: Likewise.
+
+	* tests/data/en/msg00000.html: Likewise.
+
+	* tests/data/en/plain.txt: Likewise.
+
+	* tests/data/en/plain.txt.Z: Likewise.
+
+	* tests/data/en/plain.txt.bz2: Likewise.
+
+	* tests/data/en/plain.txt.gz: Likewise.
+
+	* tests/data/en/rfc0000.txt: Likewise.
+
+	* tests/data/en/tex.tex: Likewise.
+
+	* tests/data/en/word97.doc: Likewise.
+
+	* filter/mhonarc.pl (mhonarc_filter): Fix <LI> handling.
+	(filter): Remove white spaces at tne top before uuencode_filter().
+
+	* filter/html.pl (get_author): Change link rev=made pattern. Allow
+	extra white spaces at the end.
+
 2000-02-29  Ken-ichi Hirose  <kenzo-@tama.or.jp>
 
 	* lib/easy-vsnprintf.c: Add #include <config.h>.
@@ -9,7 +68,7 @@
 
 2000-02-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
-	* tests/data/ja/Makefile.am (EXTRA_DIST): Fix typo.
+	* tests/data/ja/Makefile.am (EXTRA_DIST): Fix a typo.
 
 	* tests/data/ja/taro4.jsw: Renamed from ichitaro4.jsw because
 	JSTXT.EXE can handle only an 8.3 file name. [namazu-devel-ja:00076]
