--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 This is the todo list for Namazu.
 
+  * Make a filter `info'.
+  * Make a filter `perldoc'.
+  * Support a zlib-compressed index.
+  * Employ an effient indexing algorithm.
   * Make a tool to merge indices.
   * Support UTF-8 and XML.
   * Make source codes clear.
