Add mailing list info.

--- a/README
+++ b/README
@@ -38,6 +38,9 @@ What is Namazu Project?
 
 Contact
 
+   Question: Join the namazu-users-en@namazu.org mailing list!
+     See. <http://www.namazu.org/ml.html>
+
    General:
      info@namazu.org
 
