--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,5 +1,9 @@
 2000-02-29  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
+	* Fixed version number. Version 1.01.
+	
+	* Version 1.00.
+
 	* MMagic.pm (checktype_filehandle): Fixed to work multiple subtests.
 
 2000-02-28  NOKUBI Takatsugu  <knok@daionet.gr.jp>
