--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-03-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* Namazu: Version 2.0.1 released.
+
+
 2000-03-01  Ken-ichi Hirose  <kenzo-@tama.or.jp>
 
 	* filter/olepowerpoint.pl (filter): MS Application need \ path
