--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2000-03-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
-	* Namazu: Version 2.0.1 released.
+  	* configure.in (AM_INIT_AUTOMAKE): Bumped version number to 2.0.2
 
+	* Namazu: Version 2.0.1 released.
 
 2000-03-01  Ken-ichi Hirose  <kenzo-@tama.or.jp>
 
